# troubleshoot-mcp-server

./: .claude.json  .coverage  .dockerignore  .gitignore  .melange.yaml  CLAUDE.md  DOCKER.md  Dockerfile  PODMAN.md  README.md  RELEASE.md  apko.yaml  conftest.py  coverage.xml  melange.rsa  melange.rsa.pub  pyproject.toml  pytest.ini  pytest_asyncio_plugin.py  sbom-index.spdx.json  sbom-x86_64.spdx.json
.claude/: settings.json
.claude/commands/: complete-task.md  plan-task.md  review-pr.md  start-task.md
.github/linters/: .ruff.toml
.github/workflows/: README.md  pr-checks.yaml  publish-container.yaml  publish-container.yml
docs/: api_reference.md  architecture.md  asyncio_fixes.md  dependency_management.md  developer_guide.md  troubleshooting.md  user_guide.md
docs/agentic/: ai-readme.md  github-mcp-guide.md
docs/agentic/templates/: component-doc.md  task-template.md
docs/components/: bundle-manager.md  command-executor.md  file-explorer.md  mcp-handler.md
docs/examples/: prompt_examples.md
examples/mcp-servers/: custom-bundle-dir.json  custom-env-vars.json  mcp-client-config.json  mcp-examples-repomix.xml  minimal-config.json  repomix-fetch-server.xml  repomix-sqlite-server.xml  standard-config.json
examples/project-kickoff/: architecture-doc.md  bundle-manager-doc.md  command-executor-doc.md  file-explorer-doc.md  mcp-handler-doc.md  readme-doc.md  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md
mcp-server-troubleshoot/: .dockerignore  DOCKER.md  Dockerfile  README.md  build.sh  pyproject.toml  run.sh  test_mcp.py
mcp-server-troubleshoot/bundles/: README.md
mcp-server-troubleshoot/scripts/: README.md  build.sh  run.sh  run_tests.sh
mcp-server-troubleshoot/src/mcp_server_troubleshoot/: __init__.py  __main__.py  bundle.py  cli.py  files.py  kubectl.py  server.py
mcp-server-troubleshoot/test-bundles/: README.md
mcp-server-troubleshoot/tests/: README.md  __init__.py  conftest.py  debug_mcp.py  test_all.py  test_bundle.py  test_bundle_path_resolution.py  test_components.py  test_docker.py  test_files.py  test_grep_fix.py  test_integration.py  test_kubectl.py  test_real_bundle.py  test_server.py
mcp-server-troubleshoot/tests/e2e/: mcp_integration_plan.md  test_container.py  test_container_mcp.py  test_docker.py  test_mcp_protocol.py
mcp-server-troubleshoot/tests/fixtures/: mock_sbctl.py
mcp-server-troubleshoot/tests/integration/: test_integration.py  test_mcp_direct.py  test_real_bundle.py
mcp-server-troubleshoot/tests/unit/: test_bundle.py  test_files.py  test_server.py
mcp_stdio_lifecycle/: Dockerfile  IMPLEMENTATION_RECOMMENDATIONS.md  README.md  demonstrate_lifecycle.sh  requirements.txt  stdio_lifecycle_example.py
scripts/: README.md  build.sh  build_test.sh  debug_e2e.sh  demonstrate_lifecycle.sh  generate_test_keys.sh  prepare_tests.sh  run.sh  run_e2e_tests.sh  run_tests.sh  setup_env.sh
src/mcp_server_troubleshoot/: __main__.py  bundle.py  cli.py  config.py  files.py  formatters.py  kubectl.py  lifecycle.py  server.py
tasks/active/: optimize-grep-files-token-usage.md  optimize-mcp-token-usage.md  switch-to-melange-apko-build.md
tasks/backlog/: claude-release-notes.md  optimize-grep-files-token-usage.md  optimize-kubectl-response-formatting.md  smart-file-reading-with-preview.md
tasks/completed/: bundle-cleanup.md  documentation-review.md  github-workflow-container-publish.md  implement-comprehensive-mcp-testing.md  list-bundles-tool.md  optimize-kubectl-response-formatting.md  optimize-mcp-token-usage.md  pytest-warning-review.md  replicated-vp.md  repository-setup.md  task-1-project-setup.md  task-2-bundle-manager.md  task-4-file-explorer.md  task-5-dockerfile.md  task-6-integration-testing.md  update-dependencies.md
tasks/ready/: optimize-mcp-token-usage.md  task-1-project-setup.md  task-2-bundle-manager.md  task-3-command-executor.md  task-4-file-explorer.md  task-5-dockerfile.md  task-6-integration-testing.md  update-dependencies.md
tasks/review/: documentation-review.md  github-workflow-container-publish.md  mcp-config.md  repository-setup.md  task-1-project-setup.md  task-2-bundle-manager.md  task-3-command-executor.md  task-4-file-explorer.md  task-5-dockerfile.md  task-6-integration-testing.md
tasks/started/: github-workflow-container-publish.md  implement-comprehensive-mcp-testing.md  replicated-vp.md  repository-setup.md  task-1-project-setup.md  task-2-bundle-manager.md  task-3-command-executor.md  task-4-file-explorer.md  task-5-dockerfile.md  task-6-integration-testing.md
tests/: .ruff.toml  README.md  conftest.py  test_quality_assessment.md
tests/e2e/: FIXES.md  README.md  quick_check.py  test_container.py  test_container_consolidated.py  test_container_mcp.py  test_docker.py  test_functional.py  test_mcp_protocol.py  test_non_container.py  test_podman.py  test_podman_container.py  utils.py
tests/fixtures/: .ruff.toml  mock_kubectl.py  mock_sbctl.py
tests/integration/: SUCCESS.md  conftest.py  mcp_client_test.py  mcp_test_utils.py  test_api_server_lifecycle.py  test_integration.py  test_mcp_client_config.py  test_mcp_direct.py  test_mcp_protocol_basic.py  test_real_bundle.py  test_stdio_lifecycle.py  test_url_fetch_auth.py
tests/unit/: conftest.py  test_bundle.py  test_bundle_path_resolution.py  test_cli.py  test_components.py  test_config.py  test_files.py  test_files_parametrized.py  test_grep_fix.py  test_kubectl.py  test_kubectl_parametrized.py  test_lifecycle.py  test_list_bundles.py  test_main.py  test_replicated_vendor_portal.py  test_server.py  test_server_parametrized.py  test_verbosity.py
tests/util/: README.md  __init__.py  debug_mcp.py
